# VoxLabs

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  restart-frontend.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy-nextjs.yml  deploy-pages.yml
api/: .env.example  Dockerfile  README.md  auth.py  download_models.py  main.py  pyproject.toml  voice_engine.py
api/engine/: __init__.py  emotional_tts.py
api/pipelines/: inference.py  train.py
api/tests/: test_engine.py  test_main.py
backend/: Dockerfile  __init__.py  pyproject.toml  requirements.txt
desktop/: Cargo.toml  README.md  tauri.conf.json
docker/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
docs/: PROJECT_COMPLETE.md  QUICKSTART.md  README.md  api.md  backend.md  frontend.md  setup.md
frontend/: .eslintrc.js  Dockerfile  README.md  next.config.js  package-lock.json
frontend/app/: layout.tsx  page.tsx
lib/npm/: README.md  package.json  tsconfig.json
lib/npm/src/: cloner.ts  index.ts  processor.ts  storage.ts  synthesizer.ts
lib/pypi/: README.md  pyproject.toml
lib/pypi/src/voxlabs/: __init__.py  cloner.py  processor.py  storage.py  synthesizer.py
web/: Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
web/__tests__/: smoke.test.tsx
web/app/: globals.css  layout.tsx  page.tsx
web/app/api-access/: page.tsx
web/app/contribution/: page.tsx
web/app/docs/: page.tsx
web/app/studio/: page.tsx
web/app/text-to-speech/: page.tsx
web/app/voice-cloning/: page.tsx
web/components/: mode-toggle.tsx
web/components/landing/: api-section.tsx  hero-section.tsx  how-it-works-section.tsx
web/lib/: api.ts  types.ts
(+5 files in other folders)
