[package]
name = "voxlabs-desktop"
version = "2.0.0"
description = "VoxLabs Desktop Application"
authors = ["nishanth-kj"]
license = "MIT"
repository = "https://github.com/nishanth-kj/VoxLabs"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
