[project]
name = "voxlabs"
version = "2.0.0"
description = "Server-side voice synthesis and cloning library"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "nishanth-kj"}
]
keywords = ["voice", "tts", "synthesis", "cloning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gtts>=2.5.0",
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
